<resources>
  <string name="app_name">DreamBike</string>
  <string name="title_home">Home</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_notifications">Notifications</string>
  <string name="title_login">Login</string>
  <string name="logo">logo</string>
  <string name="welcome">Welcome to DreamBike</string>
  <string name="username">Username</string>
  <string name="password">Password</string>
  <string name="title_activity_maps">Map</string>
  <string name="url">http://localhost:4000</string>
</resources>
