<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorGray1"
  android:orientation="vertical"
  tools:context=".ui.login.LoginFragment">

  <ImageView
    android:id="@+id/logo"
    android:layout_width="180dp"
    android:layout_height="162dp"
    android:layout_marginTop="60dp"
    android:layout_centerHorizontal="true"
    android:layout_alignParentTop="true"
    android:src="@drawable/notxtrnd"
    android:contentDescription="@string/logo"/>

  <TextView
    android:id="@+id/welcome"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="7dp"
    android:contentDescription="@string/welcome"
    android:fontFamily="sans-serif"
    android:text="@string/welcome"
    android:textAlignment="center"
    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
    android:textColor="@color/colorBlack"
    tools:text="@string/welcome"
    android:gravity="center_horizontal" />

  <EditText
    android:id="@+id/username"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/logo"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="72dp"
    android:ems="10"
    android:textSize="21sp"
    android:background="#11000000"
    android:inputType="textPersonName"
    android:hint="@string/username"
     />

  <EditText
    android:id="@+id/password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/username"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="15dp"
    android:ems="10"
    android:drawableLeft="@drawable/ic_action_password"
    android:textSize="21sp"
    android:background="#11000000"
    android:inputType="textPassword"
    android:hint="@string/password"
    android:drawableStart="@drawable/ic_action_password" />

 <Button
   android:id="@+id/loginBtn"
   android:layout_height="30dp"
   android:layout_width="220dp"
   android:layout_centerHorizontal="true"
   android:layout_below="@+id/password"
   android:layout_marginTop="20dp"
   android:layout_centerInParent="true"
   android:textSize="15sp"
   android:shadowRadius="20"
   android:textAlignment="center"
   android:text="@string/title_login"
   android:textColor="@color/colorBlack"
   android:paddingLeft="60dp"
   android:paddingRight="60dp"
   android:background = "@drawable/btn"
   android:gravity="center_horizontal" />

  <TextView
    android:id="@+id/register"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Register here."
    android:textColor="@color/colorGray3"
    android:textColorLink="@color/colorBlack"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="65dp" />

</RelativeLayout>
