<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".LoginActivity">

  <RelativeLayout
    android:id="@+id/loadingPanel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dimBackgroundColor"
    android:elevation="2dp"
    android:gravity="center"
    android:visibility="gone">

    <ProgressBar
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"

      android:background="@drawable/rounded_corners"
      android:elevation="10dp"
      android:indeterminate="true" />
  </RelativeLayout>

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray1"
    android:gravity="center"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <ImageView
      android:id="@+id/logo"
      android:layout_width="180dp"
      android:layout_height="162dp"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="60dp"
      android:contentDescription="@string/logo"
      android:src="@drawable/notxtrnd" />

    <TextView
      android:id="@+id/welcomeTxt"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="7dp"
      android:contentDescription="@string/welcome"
      android:fontFamily="sans-serif"
      android:gravity="center_horizontal"
      android:text="@string/welcome"
      android:textAlignment="center"
      android:textAppearance="@style/TextAppearance.AppCompat.Display1"
      android:textColor="@color/colorBlack"
      tools:text="@string/welcome" />

    <EditText
      android:id="@+id/username"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/logo"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="65dp"
      android:background="#11000000"
      android:ems="10"
      android:hint="@string/username"
      android:inputType="textPersonName"
      android:textSize="21sp" />

    <EditText
      android:id="@+id/password"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/username"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="15dp"
      android:background="#11000000"
      android:drawableStart="@drawable/ic_action_password"
      android:drawableLeft="@drawable/ic_action_password"
      android:ems="10"
      android:hint="@string/password"
      android:inputType="textPassword"
      android:textSize="21sp" />

    <Button
      android:id="@+id/loginBtn"
      android:layout_width="220dp"
      android:layout_height="30dp"
      android:layout_below="@+id/password"
      android:layout_centerInParent="true"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="20dp"
      android:background="@drawable/btn"
      android:gravity="center_horizontal"
      android:paddingLeft="60dp"
      android:paddingRight="60dp"
      android:shadowRadius="20"
      android:text="@string/title_login"
      android:textAlignment="center"
      android:textColor="@color/colorBlack"
      android:textSize="15sp" />

    <TextView
      android:id="@+id/infoTxt"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/loginBtn"
      android:layout_centerInParent="true"
      android:layout_margin="15dp"
      android:gravity="center"
      android:text=""
      android:textColor="@color/colorAlert"
      android:textSize="18sp" />

    <TextView
      android:id="@+id/registerTxt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="65dp"
      android:text="Register here."
      android:textColor="@color/colorGray3"
      android:textColorLink="@color/colorBlack" />
  </RelativeLayout>

</RelativeLayout>
